--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Gilbert Nshimyimana - Software Developer</title>
+    <link rel="icon" href="./assets/mylog.png" type="image/x-icon">
+
 </head>
 
 <body>
