--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
         <div class="logo">
             <img src="./assets/mylog.png" alt="logo">
-            <a href="https://youtube.com/@AsmrProg" target="_blank">YVOC Tech</a>
+            <a href="" target="_blank">YVOC Tech</a>
         </div>
         <ul>
             <li><a href="#main">Home</a></li>
