--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                 <div class="user">
                     <img src="assets/us-1.jpg" alt="Dianne Russell">
                     <div class="info">
-                        <h5>Dianne Russell</h5>
-                        <p>Tech Corp</p>
+                        <h5>Albert</h5>
+                        <p>Assitant Manager</p>
                     </div>
                 </div>
             </div>
@@ -180,8 +180,8 @@
                 <div class="user">
                     <img src="assets/us-2.jpg" alt="Kristian Watson">
                     <div class="info">
-                        <h5>Kristian Watson</h5>
-                        <p>RetailTech Solutions</p>
+                        <h5>Fabrice</h5>
+                        <p>YVOC Manager</p>
                     </div>
                 </div>
             </div>
