--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     "Gilbert’s work on our mobile app was exceptional. The AI integration helped optimize the user experience, and we couldn’t be happier with the results!"
                 </p>
                 <div class="user">
-                    <img src="assets/us-1.jpg" alt="Dianne Russell">
+                    <img src="assets/us-1.jpg" alt="Albert">
                     <div class="info">
                         <h5>Albert</h5>
                         <p>Assitant Manager</p>
@@ -178,7 +178,7 @@
                     "Amazing work! The full-stack web app created by Gilbert significantly improved our operational efficiency. Highly recommended!"
                 </p>
                 <div class="user">
-                    <img src="assets/us-2.jpg" alt="Kristian Watson">
+                    <img src="assets/us-2.jpg" alt="Fabrice">
                     <div class="info">
                         <h5>Fabrice</h5>
                         <p>YVOC Manager</p>
